add post and gallery photos

--- a/src/components/general/Welcome.astro
+++ b/src/components/general/Welcome.astro
@@ -19,7 +19,7 @@ import slide5 from "../../assets/slide-5.jpg";
     </p> -->
   <div class="">
     <h1><span class="flex items-center justify-center "><span>Hari Batik Nasional 2024</span></span></h1>
-    <p class="flex items-center justify-center  capitalize">melestarikan budaya luhur bangsa lewat batik</p>
+    <p class="flex items-center justify-center  capitalize"> Keserasian Berbusana Kebaya dan Batik untuk Wanita</p>
   </div>
 </section>
 
